added mods.json and tools with. Updated HTML to use new file.

--- a/index.html
+++ b/index.html
@@ -10,46 +10,23 @@
 </head>
 
 <body>
-    <ul id="myList">
-        <li data-current="false" data-mod-version="1.6.5" data-game-version="3.11.4"><a href="https://forge.sp-tarkov.com/mod/592/amandss-graphics">Amands's Graphics</a></li>
-        <li data-current="false" data-mod-version="5.0.2" data-game-version="3.11.4"><a href="https://forge.sp-tarkov.com/mod/1155/lootvalue">LootValue</a></li>
-        <li data-current="false" data-mod-version="1.7.0" data-game-version="3.11.4"><a href="https://forge.sp-tarkov.com/mod/697/fontaines-always-level-endurance-ale">Fontaine's Always Level Endurance (ALE)</a></li>
-        <li data-current="false" data-mod-version="1.2.3" data-game-version="4.0.1"><a href="https://forge.sp-tarkov.com/mod/1311/ram-cleaner-fix">Ram Cleaner Fix</a></li>
-        <li data-current="false" data-mod-version="3.1.6" data-game-version="3.11.4"><a href="https://forge.sp-tarkov.com/mod/789/moar-bagels-ultra-lite-spawn-mod">MOAR + Bagels - Ultra lite spawn mod</a></li>
-        <li data-current="true" data-mod-version="5.0.3" data-game-version="4.0.1"><a href="https://forge.sp-tarkov.com/mod/1342/ui-fixes">UI Fixes</a></li>
-        <li data-current="true" data-mod-version="1.0.2" data-game-version="4.0.1"><a href="https://forge.sp-tarkov.com/mod/1431/dynamic-maps">Dynamic Maps</a></li>
-        <li data-current="false" data-mod-version="1.4.0" data-game-version="4.0.1"><a href="https://forge.sp-tarkov.com/mod/1533/more-tag-colours">More Tag Colours</a></li>
-        <li data-current="true" data-mod-version="4.2.0" data-game-version="4.0.0"><a href="https://forge.sp-tarkov.com/mod/791/sain-solarints-ai-modifications-full-ai-combat-system-replacement">SAIN - Solarint's AI Modifications - Full AI Combat System Replacement</a></li>
-        <li data-current="false" data-mod-version="1.6.0" data-game-version="3.11.4"><a href="https://forge.sp-tarkov.com/mod/812/looting-bots">Looting Bots</a></li>
-        <li data-current="false" data-mod-version="1.7.1" data-game-version="3.11.4"><a href="https://forge.sp-tarkov.com/mod/827/waypoints-expanded-navmesh">Waypoints - Expanded Navmesh</a></li>
-        <li data-current="false" data-mod-version="1.5.17" data-game-version="3.11.4"><a href="https://forge.sp-tarkov.com/mod/861/morecheckmarks">MoreCheckmarks</a></li>
-        <li data-current="false" data-mod-version="2.0.3" data-game-version="4.0.1"><a href="https://forge.sp-tarkov.com/mod/865/gilded-key-storage">Gilded Key Storage</a></li>
-        <li data-current="true" data-mod-version="1.4.0" data-game-version="4.0.1"><a href="https://forge.sp-tarkov.com/mod/902/bigbrain">BigBrain</a></li>
-        <li data-current="false" data-mod-version="1.5.0" data-game-version="4.0.1"><a href="https://forge.sp-tarkov.com/mod/933/use-loose-loot">Use Loose Loot</a></li>
-        <li data-current="false" data-mod-version="1.3100.3" data-game-version="3.10.5"><a href="https://forge.sp-tarkov.com/mod/1055/thats-lit-logical-ai-vision">That's Lit - Logical AI Vision</a></li>
-        <li data-current="false" data-mod-version="0.10.3" data-game-version="3.11.4"><a href="https://forge.sp-tarkov.com/mod/1109/questing-bots">Questing Bots</a></li>
-        <li data-current="false" data-mod-version="2.0.1" data-game-version="4.0.1"><a href="https://forge.sp-tarkov.com/mod/1131/live-flea-prices">Live Flea Prices</a></li>
-        <li data-current="false" data-mod-version="2.0.1" data-game-version="4.0.1"><a href="https://forge.sp-tarkov.com/mod/2389/expanded-task-text">Expanded Task Text</a></li>
-        <li data-current="true" data-mod-version="2.0.2" data-game-version="4.0.1"><a href="https://forge.sp-tarkov.com/mod/2326/project-fika">Project Fika</a></li>
-        <li data-current="false" data-mod-version="1.0.4" data-game-version="3.11.4"><a href="https://forge.sp-tarkov.com/mod/2100/make-marked-room-loot-great-again">Make Marked Room Loot Great Again</a></li>
-        <li data-current="false" data-mod-version="1.2.0" data-game-version="4.0.0"><a href="https://forge.sp-tarkov.com/mod/1925/nerfbotgrenades">NerfBotGrenades</a></li>
-        <li data-current="false" data-mod-version="0.43.5" data-game-version="4.0.1"><a href="https://forge.sp-tarkov.com/mod/1896/tarkov-hd-item-rework-project">Tarkov HD Item Rework Project</a></li>
-        <li data-current="false" data-mod-version="1.3.1" data-game-version="3.11.4"><a href="https://forge.sp-tarkov.com/mod/1657/mergeconsumables">MergeConsumables</a></li>
-        <li data-current="false" data-mod-version="1.2.2" data-game-version="3.11.4"><a href="https://forge.sp-tarkov.com/mod/1582/headshot-darkness">Headshot Darkness</a></li>
-        <li data-current="false" data-mod-version="1.4.0" data-game-version="3.11.4"><a href="https://forge.sp-tarkov.com/mod/1575/increase-climb-height">Increase Climb Height</a></li>
-        <li data-current="false" data-mod-version="2.0.0" data-game-version="4.0.1"><a href="https://forge.sp-tarkov.com/mod/1539/bosses-have-lega-medals">Bosses Have Lega Medals</a></li>
-        <li data-current="true" data-mod-version="2.0.1" data-game-version="4.0.1"><a href="https://forge.sp-tarkov.com/mod/1538/ref-spt-friendly-quests">Ref - SPT Friendly Quests</a></li>
-    </ul>
     <div id="mainWindow">
         <div id="head">
             <h1>Camp-D SPT Modlist</h1>
             <p>Download the <a href="https://forge.sp-tarkov.com/installer">installer</a> for SPT</p>
         </div>
-        <h2>Current Mods</h2>
-        <ul id="currentList"></ul>
-
-        <h2>Potential Mods</h2>
-        <ul id="potentialList"></ul>
+        <table id="lists">
+            <tr>
+                <td>
+                    <h2>Current Mods</h2>
+                    <ul id="currentList"></ul>
+                </td>
+                <td>
+                    <h2>Potential Mods</h2>
+                    <ul id="potentialList"></ul>
+                </td>
+            </tr>
+        </table>
     </div>
     <script src="script.js"></script>
 </body>
